--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9663865546218487" branch-rate="0.85" lines-covered="115" lines-valid="119" branches-covered="34" branches-valid="40" complexity="2.0" version="2.1.1" timestamp="1442280153323">
+<coverage line-rate="0.9669421487603306" branch-rate="0.8409090909090909" lines-covered="117" lines-valid="121" branches-covered="37" branches-valid="44" complexity="2.0476190476190474" version="2.1.1" timestamp="1442280975373">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9663865546218487" branch-rate="0.85" complexity="2.0">
+		<package name="com.tw.biblioteca" line-rate="0.9669421487603306" branch-rate="0.8409090909090909" complexity="2.0476190476190474">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -340,14 +340,14 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="8" branch="false"/>
-								<line number="12" hits="8" branch="false"/>
-								<line number="13" hits="8" branch="false"/>
-								<line number="14" hits="8" branch="false"/>
-								<line number="15" hits="8" branch="false"/>
-								<line number="16" hits="8" branch="false"/>
-								<line number="17" hits="8" branch="false"/>
-								<line number="18" hits="8" branch="false"/>
+								<line number="10" hits="9" branch="false"/>
+								<line number="12" hits="9" branch="false"/>
+								<line number="13" hits="9" branch="false"/>
+								<line number="14" hits="9" branch="false"/>
+								<line number="15" hits="9" branch="false"/>
+								<line number="16" hits="9" branch="false"/>
+								<line number="17" hits="9" branch="false"/>
+								<line number="18" hits="9" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenOption" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -359,14 +359,14 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="8" branch="false"/>
-						<line number="12" hits="8" branch="false"/>
-						<line number="13" hits="8" branch="false"/>
-						<line number="14" hits="8" branch="false"/>
-						<line number="15" hits="8" branch="false"/>
-						<line number="16" hits="8" branch="false"/>
-						<line number="17" hits="8" branch="false"/>
-						<line number="18" hits="8" branch="false"/>
+						<line number="10" hits="9" branch="false"/>
+						<line number="12" hits="9" branch="false"/>
+						<line number="13" hits="9" branch="false"/>
+						<line number="14" hits="9" branch="false"/>
+						<line number="15" hits="9" branch="false"/>
+						<line number="16" hits="9" branch="false"/>
+						<line number="17" hits="9" branch="false"/>
+						<line number="18" hits="9" branch="false"/>
 						<line number="21" hits="4" branch="false"/>
 						<line number="22" hits="4" branch="false"/>
 						<line number="23" hits="4" branch="false"/>
@@ -402,25 +402,26 @@
 						<line number="19" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7777777777777778" complexity="3.0">
+				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7727272727272727" complexity="3.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Lcom/tw/biblioteca/Library;Lcom/tw/biblioteca/Menu;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="7" branch="false"/>
-								<line number="10" hits="7" branch="false"/>
-								<line number="11" hits="7" branch="false"/>
-								<line number="12" hits="7" branch="false"/>
-								<line number="13" hits="7" branch="false"/>
+								<line number="9" hits="8" branch="false"/>
+								<line number="10" hits="8" branch="false"/>
+								<line number="11" hits="8" branch="false"/>
+								<line number="12" hits="8" branch="false"/>
+								<line number="13" hits="8" branch="false"/>
 							</lines>
 						</method>
-						<method name="dispatch" signature="()V" line-rate="1.0" branch-rate="0.7777777777777778" complexity="0">
+						<method name="dispatch" signature="()V" line-rate="1.0" branch-rate="0.7727272727272727" complexity="0">
 							<lines>
-								<line number="17" hits="7" branch="true" condition-coverage="77% (14/18)">
+								<line number="17" hits="8" branch="true" condition-coverage="77% (17/22)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 										<condition number="1" type="jump" coverage="50%"/>
 										<condition number="2" type="jump" coverage="50%"/>
 										<condition number="3" type="jump" coverage="50%"/>
+										<condition number="4" type="jump" coverage="50%"/>
 										<condition number="0" type="switch" coverage="100%"/>
 										<condition number="1" type="switch" coverage="100%"/>
 									</conditions>
@@ -434,24 +435,27 @@
 								<line number="28" hits="1" branch="false"/>
 								<line number="30" hits="1" branch="false"/>
 								<line number="31" hits="1" branch="false"/>
-								<line number="32" hits="1" branch="false"/>
 								<line number="33" hits="1" branch="false"/>
-								<line number="35" hits="5" branch="false"/>
+								<line number="34" hits="1" branch="false"/>
+								<line number="35" hits="1" branch="false"/>
+								<line number="36" hits="1" branch="false"/>
+								<line number="38" hits="6" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="7" branch="false"/>
-						<line number="10" hits="7" branch="false"/>
-						<line number="11" hits="7" branch="false"/>
-						<line number="12" hits="7" branch="false"/>
-						<line number="13" hits="7" branch="false"/>
-						<line number="17" hits="7" branch="true" condition-coverage="77% (14/18)">
+						<line number="9" hits="8" branch="false"/>
+						<line number="10" hits="8" branch="false"/>
+						<line number="11" hits="8" branch="false"/>
+						<line number="12" hits="8" branch="false"/>
+						<line number="13" hits="8" branch="false"/>
+						<line number="17" hits="8" branch="true" condition-coverage="77% (17/22)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 								<condition number="1" type="jump" coverage="50%"/>
 								<condition number="2" type="jump" coverage="50%"/>
 								<condition number="3" type="jump" coverage="50%"/>
+								<condition number="4" type="jump" coverage="50%"/>
 								<condition number="0" type="switch" coverage="100%"/>
 								<condition number="1" type="switch" coverage="100%"/>
 							</conditions>
@@ -465,9 +469,11 @@
 						<line number="28" hits="1" branch="false"/>
 						<line number="30" hits="1" branch="false"/>
 						<line number="31" hits="1" branch="false"/>
-						<line number="32" hits="1" branch="false"/>
 						<line number="33" hits="1" branch="false"/>
-						<line number="35" hits="5" branch="false"/>
+						<line number="34" hits="1" branch="false"/>
+						<line number="35" hits="1" branch="false"/>
+						<line number="36" hits="1" branch="false"/>
+						<line number="38" hits="6" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
