--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9672131147540983" branch-rate="0.8409090909090909" lines-covered="118" lines-valid="122" branches-covered="37" branches-valid="44" complexity="2.0476190476190474" version="2.1.1" timestamp="1442281420441">
+<coverage line-rate="0.9692307692307692" branch-rate="0.86" lines-covered="126" lines-valid="130" branches-covered="43" branches-valid="50" complexity="2.272727272727273" version="2.1.1" timestamp="1442297138746">
 	<packages />
 </coverage>
