--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9672131147540983" branch-rate="0.8409090909090909" lines-covered="118" lines-valid="122" branches-covered="37" branches-valid="44" complexity="2.0476190476190474" version="2.1.1" timestamp="1442281419944">
+<coverage line-rate="0.9692307692307692" branch-rate="0.86" lines-covered="126" lines-valid="130" branches-covered="43" branches-valid="50" complexity="2.272727272727273" version="2.1.1" timestamp="1442297138274">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9672131147540983" branch-rate="0.8409090909090909" complexity="2.0476190476190474">
+		<package name="com.tw.biblioteca" line-rate="0.9692307692307692" branch-rate="0.86" complexity="2.272727272727273">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -374,16 +374,40 @@
 						<line number="24" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Movie" filename="com/tw/biblioteca/Movie.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
+				<class name="com.tw.biblioteca.Movie" filename="com/tw/biblioteca/Movie.java" line-rate="1.0" branch-rate="1.0" complexity="3.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="67" branch="false"/>
-								<line number="11" hits="67" branch="false"/>
-								<line number="12" hits="67" branch="false"/>
-								<line number="13" hits="67" branch="false"/>
-								<line number="14" hits="67" branch="false"/>
-								<line number="15" hits="67" branch="false"/>
+								<line number="10" hits="73" branch="false"/>
+								<line number="11" hits="73" branch="false"/>
+								<line number="12" hits="73" branch="false"/>
+								<line number="13" hits="73" branch="false"/>
+								<line number="14" hits="73" branch="false"/>
+								<line number="15" hits="73" branch="false"/>
+							</lines>
+						</method>
+						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="23" hits="4" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="24" hits="1" branch="false"/>
+								<line number="26" hits="3" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="27" hits="1" branch="false"/>
+								<line number="29" hits="2" branch="false"/>
+								<line number="30" hits="2" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="31" hits="1" branch="false"/>
+								<line number="33" hits="1" branch="false"/>
 							</lines>
 						</method>
 						<method name="printInfo" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -394,14 +418,34 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="67" branch="false"/>
-						<line number="11" hits="67" branch="false"/>
-						<line number="12" hits="67" branch="false"/>
-						<line number="13" hits="67" branch="false"/>
-						<line number="14" hits="67" branch="false"/>
-						<line number="15" hits="67" branch="false"/>
+						<line number="10" hits="73" branch="false"/>
+						<line number="11" hits="73" branch="false"/>
+						<line number="12" hits="73" branch="false"/>
+						<line number="13" hits="73" branch="false"/>
+						<line number="14" hits="73" branch="false"/>
+						<line number="15" hits="73" branch="false"/>
 						<line number="18" hits="4" branch="false"/>
 						<line number="19" hits="4" branch="false"/>
+						<line number="23" hits="4" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="24" hits="1" branch="false"/>
+						<line number="26" hits="3" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="27" hits="1" branch="false"/>
+						<line number="29" hits="2" branch="false"/>
+						<line number="30" hits="2" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="31" hits="1" branch="false"/>
+						<line number="33" hits="1" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7727272727272727" complexity="3.5">
