--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9692307692307692" branch-rate="0.86" lines-covered="126" lines-valid="130" branches-covered="43" branches-valid="50" complexity="2.272727272727273" version="2.1.1" timestamp="1442297138274">
+<coverage line-rate="0.9694656488549618" branch-rate="0.86" lines-covered="127" lines-valid="131" branches-covered="43" branches-valid="50" complexity="2.217391304347826" version="2.1.1" timestamp="1442298106005">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9692307692307692" branch-rate="0.86" complexity="2.272727272727273">
+		<package name="com.tw.biblioteca" line-rate="0.9694656488549618" branch-rate="0.86" complexity="2.217391304347826">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -374,16 +374,16 @@
 						<line number="24" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Movie" filename="com/tw/biblioteca/Movie.java" line-rate="1.0" branch-rate="1.0" complexity="3.0">
+				<class name="com.tw.biblioteca.Movie" filename="com/tw/biblioteca/Movie.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="73" branch="false"/>
-								<line number="11" hits="73" branch="false"/>
-								<line number="12" hits="73" branch="false"/>
-								<line number="13" hits="73" branch="false"/>
-								<line number="14" hits="73" branch="false"/>
-								<line number="15" hits="73" branch="false"/>
+								<line number="10" hits="76" branch="false"/>
+								<line number="11" hits="76" branch="false"/>
+								<line number="12" hits="76" branch="false"/>
+								<line number="13" hits="76" branch="false"/>
+								<line number="14" hits="76" branch="false"/>
+								<line number="15" hits="76" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -410,6 +410,11 @@
 								<line number="33" hits="1" branch="false"/>
 							</lines>
 						</method>
+						<method name="hashCode" signature="()I" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="38" hits="4" branch="false"/>
+							</lines>
+						</method>
 						<method name="printInfo" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="18" hits="4" branch="false"/>
@@ -418,12 +423,12 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="73" branch="false"/>
-						<line number="11" hits="73" branch="false"/>
-						<line number="12" hits="73" branch="false"/>
-						<line number="13" hits="73" branch="false"/>
-						<line number="14" hits="73" branch="false"/>
-						<line number="15" hits="73" branch="false"/>
+						<line number="10" hits="76" branch="false"/>
+						<line number="11" hits="76" branch="false"/>
+						<line number="12" hits="76" branch="false"/>
+						<line number="13" hits="76" branch="false"/>
+						<line number="14" hits="76" branch="false"/>
+						<line number="15" hits="76" branch="false"/>
 						<line number="18" hits="4" branch="false"/>
 						<line number="19" hits="4" branch="false"/>
 						<line number="23" hits="4" branch="true" condition-coverage="100% (2/2)">
@@ -446,6 +451,7 @@
 						</line>
 						<line number="31" hits="1" branch="false"/>
 						<line number="33" hits="1" branch="false"/>
+						<line number="38" hits="4" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7727272727272727" complexity="3.5">
