--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9694656488549618" branch-rate="0.86" lines-covered="127" lines-valid="131" branches-covered="43" branches-valid="50" complexity="2.217391304347826" version="2.1.1" timestamp="1442298106005">
+<coverage line-rate="0.96875" branch-rate="0.8913043478260869" lines-covered="124" lines-valid="128" branches-covered="41" branches-valid="46" complexity="2.130434782608696" version="2.1.1" timestamp="1442298270386">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9694656488549618" branch-rate="0.86" complexity="2.217391304347826">
+		<package name="com.tw.biblioteca" line-rate="0.96875" branch-rate="0.8913043478260869" complexity="2.130434782608696">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -50,7 +50,7 @@
 						<line number="20" hits="0" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Book" filename="com/tw/biblioteca/Book.java" line-rate="1.0" branch-rate="0.8" complexity="3.0">
+				<class name="com.tw.biblioteca.Book" filename="com/tw/biblioteca/Book.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
@@ -85,20 +85,9 @@
 								<line number="31" hits="6" branch="false"/>
 							</lines>
 						</method>
-						<method name="hashCode" signature="()I" line-rate="1.0" branch-rate="0.5" complexity="0">
+						<method name="hashCode" signature="()I" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="36" hits="4" branch="false"/>
-								<line number="37" hits="4" branch="true" condition-coverage="50% (1/2)">
-									<conditions>
-										<condition number="0" type="jump" coverage="50%"/>
-									</conditions>
-								</line>
-								<line number="38" hits="4" branch="true" condition-coverage="50% (1/2)">
-									<conditions>
-										<condition number="0" type="jump" coverage="50%"/>
-									</conditions>
-								</line>
-								<line number="39" hits="4" branch="false"/>
 							</lines>
 						</method>
 						<method name="printInfo" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -137,17 +126,6 @@
 						<line number="29" hits="15" branch="false"/>
 						<line number="31" hits="6" branch="false"/>
 						<line number="36" hits="4" branch="false"/>
-						<line number="37" hits="4" branch="true" condition-coverage="50% (1/2)">
-							<conditions>
-								<condition number="0" type="jump" coverage="50%"/>
-							</conditions>
-						</line>
-						<line number="38" hits="4" branch="true" condition-coverage="50% (1/2)">
-							<conditions>
-								<condition number="0" type="jump" coverage="50%"/>
-							</conditions>
-						</line>
-						<line number="39" hits="4" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="2.2">
