spec to checkout movie from library

--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.96875" branch-rate="0.8913043478260869" lines-covered="124" lines-valid="128" branches-covered="41" branches-valid="46" complexity="2.130434782608696" version="2.1.1" timestamp="1442298270875">
+<coverage line-rate="0.9694656488549618" branch-rate="0.8913043478260869" lines-covered="127" lines-valid="131" branches-covered="41" branches-valid="46" complexity="2.0833333333333335" version="2.1.1" timestamp="1442298900367">
 	<packages />
 </coverage>
