--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.96875" branch-rate="0.8913043478260869" lines-covered="124" lines-valid="128" branches-covered="41" branches-valid="46" complexity="2.130434782608696" version="2.1.1" timestamp="1442298270386">
+<coverage line-rate="0.9694656488549618" branch-rate="0.8913043478260869" lines-covered="127" lines-valid="131" branches-covered="41" branches-valid="46" complexity="2.0833333333333335" version="2.1.1" timestamp="1442298899874">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.96875" branch-rate="0.8913043478260869" complexity="2.130434782608696">
+		<package name="com.tw.biblioteca" line-rate="0.9694656488549618" branch-rate="0.8913043478260869" complexity="2.0833333333333335">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -54,11 +54,11 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="85" branch="false"/>
-								<line number="10" hits="85" branch="false"/>
-								<line number="11" hits="85" branch="false"/>
-								<line number="12" hits="85" branch="false"/>
-								<line number="13" hits="85" branch="false"/>
+								<line number="9" hits="88" branch="false"/>
+								<line number="10" hits="88" branch="false"/>
+								<line number="11" hits="88" branch="false"/>
+								<line number="12" hits="88" branch="false"/>
+								<line number="13" hits="88" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -98,11 +98,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="85" branch="false"/>
-						<line number="10" hits="85" branch="false"/>
-						<line number="11" hits="85" branch="false"/>
-						<line number="12" hits="85" branch="false"/>
-						<line number="13" hits="85" branch="false"/>
+						<line number="9" hits="88" branch="false"/>
+						<line number="10" hits="88" branch="false"/>
+						<line number="11" hits="88" branch="false"/>
+						<line number="12" hits="88" branch="false"/>
+						<line number="13" hits="88" branch="false"/>
 						<line number="16" hits="15" branch="false"/>
 						<line number="17" hits="15" branch="false"/>
 						<line number="21" hits="24" branch="true" condition-coverage="100% (2/2)">
@@ -128,21 +128,21 @@
 						<line number="36" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="2.2">
+				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="22" branch="false"/>
-								<line number="8" hits="22" branch="false"/>
-								<line number="9" hits="22" branch="false"/>
-								<line number="11" hits="22" branch="false"/>
-								<line number="12" hits="22" branch="false"/>
-								<line number="13" hits="22" branch="false"/>
-								<line number="14" hits="22" branch="false"/>
-								<line number="16" hits="22" branch="false"/>
-								<line number="17" hits="22" branch="false"/>
-								<line number="18" hits="22" branch="false"/>
-								<line number="19" hits="22" branch="false"/>
+								<line number="7" hits="23" branch="false"/>
+								<line number="8" hits="23" branch="false"/>
+								<line number="9" hits="23" branch="false"/>
+								<line number="11" hits="23" branch="false"/>
+								<line number="12" hits="23" branch="false"/>
+								<line number="13" hits="23" branch="false"/>
+								<line number="14" hits="23" branch="false"/>
+								<line number="16" hits="23" branch="false"/>
+								<line number="17" hits="23" branch="false"/>
+								<line number="18" hits="23" branch="false"/>
+								<line number="19" hits="23" branch="false"/>
 							</lines>
 						</method>
 						<method name="addBook" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -172,14 +172,14 @@
 						</method>
 						<method name="printMovies" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="28" hits="1" branch="false"/>
-								<line number="29" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="28" hits="2" branch="false"/>
+								<line number="29" hits="7" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="30" hits="3" branch="false"/>
-								<line number="31" hits="1" branch="false"/>
+								<line number="30" hits="5" branch="false"/>
+								<line number="31" hits="2" branch="false"/>
 							</lines>
 						</method>
 						<method name="removeBook" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -195,19 +195,26 @@
 								<line number="40" hits="2" branch="false"/>
 							</lines>
 						</method>
+						<method name="removeMovie" signature="(Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="56" hits="1" branch="false"/>
+								<line number="57" hits="1" branch="false"/>
+								<line number="58" hits="1" branch="false"/>
+							</lines>
+						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="22" branch="false"/>
-						<line number="8" hits="22" branch="false"/>
-						<line number="9" hits="22" branch="false"/>
-						<line number="11" hits="22" branch="false"/>
-						<line number="12" hits="22" branch="false"/>
-						<line number="13" hits="22" branch="false"/>
-						<line number="14" hits="22" branch="false"/>
-						<line number="16" hits="22" branch="false"/>
-						<line number="17" hits="22" branch="false"/>
-						<line number="18" hits="22" branch="false"/>
-						<line number="19" hits="22" branch="false"/>
+						<line number="7" hits="23" branch="false"/>
+						<line number="8" hits="23" branch="false"/>
+						<line number="9" hits="23" branch="false"/>
+						<line number="11" hits="23" branch="false"/>
+						<line number="12" hits="23" branch="false"/>
+						<line number="13" hits="23" branch="false"/>
+						<line number="14" hits="23" branch="false"/>
+						<line number="16" hits="23" branch="false"/>
+						<line number="17" hits="23" branch="false"/>
+						<line number="18" hits="23" branch="false"/>
+						<line number="19" hits="23" branch="false"/>
 						<line number="22" hits="5" branch="false"/>
 						<line number="23" hits="19" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -216,14 +223,14 @@
 						</line>
 						<line number="24" hits="14" branch="false"/>
 						<line number="25" hits="5" branch="false"/>
-						<line number="28" hits="1" branch="false"/>
-						<line number="29" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="28" hits="2" branch="false"/>
+						<line number="29" hits="7" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="30" hits="3" branch="false"/>
-						<line number="31" hits="1" branch="false"/>
+						<line number="30" hits="5" branch="false"/>
+						<line number="31" hits="2" branch="false"/>
 						<line number="34" hits="7" branch="false"/>
 						<line number="35" hits="7" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -242,6 +249,9 @@
 						<line number="47" hits="2" branch="false"/>
 						<line number="48" hits="2" branch="false"/>
 						<line number="51" hits="1" branch="false"/>
+						<line number="56" hits="1" branch="false"/>
+						<line number="57" hits="1" branch="false"/>
+						<line number="58" hits="1" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.LibraryController" filename="com/tw/biblioteca/LibraryController.java" line-rate="1.0" branch-rate="1.0" complexity="1.6666666666666667">
@@ -356,35 +366,35 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="76" branch="false"/>
-								<line number="11" hits="76" branch="false"/>
-								<line number="12" hits="76" branch="false"/>
-								<line number="13" hits="76" branch="false"/>
-								<line number="14" hits="76" branch="false"/>
-								<line number="15" hits="76" branch="false"/>
+								<line number="10" hits="80" branch="false"/>
+								<line number="11" hits="80" branch="false"/>
+								<line number="12" hits="80" branch="false"/>
+								<line number="13" hits="80" branch="false"/>
+								<line number="14" hits="80" branch="false"/>
+								<line number="15" hits="80" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="23" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="23" hits="5" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="24" hits="1" branch="false"/>
-								<line number="26" hits="3" branch="true" condition-coverage="100% (2/2)">
+								<line number="26" hits="4" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="27" hits="1" branch="false"/>
-								<line number="29" hits="2" branch="false"/>
-								<line number="30" hits="2" branch="true" condition-coverage="100% (2/2)">
+								<line number="29" hits="3" branch="false"/>
+								<line number="30" hits="3" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="31" hits="1" branch="false"/>
+								<line number="31" hits="2" branch="false"/>
 								<line number="33" hits="1" branch="false"/>
 							</lines>
 						</method>
@@ -395,39 +405,39 @@
 						</method>
 						<method name="printInfo" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="18" hits="4" branch="false"/>
-								<line number="19" hits="4" branch="false"/>
+								<line number="18" hits="6" branch="false"/>
+								<line number="19" hits="6" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="76" branch="false"/>
-						<line number="11" hits="76" branch="false"/>
-						<line number="12" hits="76" branch="false"/>
-						<line number="13" hits="76" branch="false"/>
-						<line number="14" hits="76" branch="false"/>
-						<line number="15" hits="76" branch="false"/>
-						<line number="18" hits="4" branch="false"/>
-						<line number="19" hits="4" branch="false"/>
-						<line number="23" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="10" hits="80" branch="false"/>
+						<line number="11" hits="80" branch="false"/>
+						<line number="12" hits="80" branch="false"/>
+						<line number="13" hits="80" branch="false"/>
+						<line number="14" hits="80" branch="false"/>
+						<line number="15" hits="80" branch="false"/>
+						<line number="18" hits="6" branch="false"/>
+						<line number="19" hits="6" branch="false"/>
+						<line number="23" hits="5" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="24" hits="1" branch="false"/>
-						<line number="26" hits="3" branch="true" condition-coverage="100% (2/2)">
+						<line number="26" hits="4" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="27" hits="1" branch="false"/>
-						<line number="29" hits="2" branch="false"/>
-						<line number="30" hits="2" branch="true" condition-coverage="100% (2/2)">
+						<line number="29" hits="3" branch="false"/>
+						<line number="30" hits="3" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="31" hits="1" branch="false"/>
+						<line number="31" hits="2" branch="false"/>
 						<line number="33" hits="1" branch="false"/>
 						<line number="38" hits="4" branch="false"/>
 					</lines>
