--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9712230215827338" branch-rate="0.8958333333333334" lines-covered="135" lines-valid="139" branches-covered="43" branches-valid="48" complexity="2.12" version="2.1.1" timestamp="1442306148097">
+<coverage line-rate="0.9714285714285714" branch-rate="0.9" lines-covered="136" lines-valid="140" branches-covered="45" branches-valid="50" complexity="2.16" version="2.1.1" timestamp="1442307425544">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9712230215827338" branch-rate="0.8958333333333334" complexity="2.12">
+		<package name="com.tw.biblioteca" line-rate="0.9714285714285714" branch-rate="0.9" complexity="2.16">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -54,11 +54,11 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="103" branch="false"/>
-								<line number="10" hits="103" branch="false"/>
-								<line number="11" hits="103" branch="false"/>
-								<line number="12" hits="103" branch="false"/>
-								<line number="13" hits="103" branch="false"/>
+								<line number="9" hits="109" branch="false"/>
+								<line number="10" hits="109" branch="false"/>
+								<line number="11" hits="109" branch="false"/>
+								<line number="12" hits="109" branch="false"/>
+								<line number="13" hits="109" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -98,11 +98,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="103" branch="false"/>
-						<line number="10" hits="103" branch="false"/>
-						<line number="11" hits="103" branch="false"/>
-						<line number="12" hits="103" branch="false"/>
-						<line number="13" hits="103" branch="false"/>
+						<line number="9" hits="109" branch="false"/>
+						<line number="10" hits="109" branch="false"/>
+						<line number="11" hits="109" branch="false"/>
+						<line number="12" hits="109" branch="false"/>
+						<line number="13" hits="109" branch="false"/>
 						<line number="16" hits="15" branch="false"/>
 						<line number="17" hits="15" branch="false"/>
 						<line number="21" hits="24" branch="true" condition-coverage="100% (2/2)">
@@ -132,17 +132,17 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="28" branch="false"/>
-								<line number="8" hits="28" branch="false"/>
-								<line number="9" hits="28" branch="false"/>
-								<line number="11" hits="28" branch="false"/>
-								<line number="12" hits="28" branch="false"/>
-								<line number="13" hits="28" branch="false"/>
-								<line number="14" hits="28" branch="false"/>
-								<line number="16" hits="28" branch="false"/>
-								<line number="17" hits="28" branch="false"/>
-								<line number="18" hits="28" branch="false"/>
-								<line number="19" hits="28" branch="false"/>
+								<line number="7" hits="30" branch="false"/>
+								<line number="8" hits="30" branch="false"/>
+								<line number="9" hits="30" branch="false"/>
+								<line number="11" hits="30" branch="false"/>
+								<line number="12" hits="30" branch="false"/>
+								<line number="13" hits="30" branch="false"/>
+								<line number="14" hits="30" branch="false"/>
+								<line number="16" hits="30" branch="false"/>
+								<line number="17" hits="30" branch="false"/>
+								<line number="18" hits="30" branch="false"/>
+								<line number="19" hits="30" branch="false"/>
 							</lines>
 						</method>
 						<method name="addBook" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -197,30 +197,30 @@
 						</method>
 						<method name="removeMovie" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="56" hits="4" branch="false"/>
-								<line number="57" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="56" hits="5" branch="false"/>
+								<line number="57" hits="5" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="58" hits="3" branch="false"/>
 								<line number="59" hits="3" branch="false"/>
-								<line number="61" hits="1" branch="false"/>
+								<line number="61" hits="2" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="28" branch="false"/>
-						<line number="8" hits="28" branch="false"/>
-						<line number="9" hits="28" branch="false"/>
-						<line number="11" hits="28" branch="false"/>
-						<line number="12" hits="28" branch="false"/>
-						<line number="13" hits="28" branch="false"/>
-						<line number="14" hits="28" branch="false"/>
-						<line number="16" hits="28" branch="false"/>
-						<line number="17" hits="28" branch="false"/>
-						<line number="18" hits="28" branch="false"/>
-						<line number="19" hits="28" branch="false"/>
+						<line number="7" hits="30" branch="false"/>
+						<line number="8" hits="30" branch="false"/>
+						<line number="9" hits="30" branch="false"/>
+						<line number="11" hits="30" branch="false"/>
+						<line number="12" hits="30" branch="false"/>
+						<line number="13" hits="30" branch="false"/>
+						<line number="14" hits="30" branch="false"/>
+						<line number="16" hits="30" branch="false"/>
+						<line number="17" hits="30" branch="false"/>
+						<line number="18" hits="30" branch="false"/>
+						<line number="19" hits="30" branch="false"/>
 						<line number="22" hits="5" branch="false"/>
 						<line number="23" hits="19" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -255,25 +255,25 @@
 						<line number="47" hits="2" branch="false"/>
 						<line number="48" hits="2" branch="false"/>
 						<line number="51" hits="1" branch="false"/>
-						<line number="56" hits="4" branch="false"/>
-						<line number="57" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="56" hits="5" branch="false"/>
+						<line number="57" hits="5" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="58" hits="3" branch="false"/>
 						<line number="59" hits="3" branch="false"/>
-						<line number="61" hits="1" branch="false"/>
+						<line number="61" hits="2" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.LibraryController" filename="com/tw/biblioteca/LibraryController.java" line-rate="1.0" branch-rate="1.0" complexity="1.5">
+				<class name="com.tw.biblioteca.LibraryController" filename="com/tw/biblioteca/LibraryController.java" line-rate="1.0" branch-rate="1.0" complexity="1.75">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Lcom/tw/biblioteca/Library;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="10" branch="false"/>
-								<line number="9" hits="10" branch="false"/>
-								<line number="10" hits="10" branch="false"/>
-								<line number="11" hits="10" branch="false"/>
+								<line number="7" hits="11" branch="false"/>
+								<line number="9" hits="11" branch="false"/>
+								<line number="10" hits="11" branch="false"/>
+								<line number="11" hits="11" branch="false"/>
 							</lines>
 						</method>
 						<method name="issueBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -293,12 +293,17 @@
 						</method>
 						<method name="issueMovie" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="35" hits="2" branch="false"/>
-								<line number="36" hits="2" branch="false"/>
-								<line number="37" hits="2" branch="false"/>
-								<line number="38" hits="2" branch="false"/>
-								<line number="39" hits="2" branch="false"/>
-								<line number="40" hits="2" branch="false"/>
+								<line number="35" hits="3" branch="false"/>
+								<line number="36" hits="3" branch="false"/>
+								<line number="37" hits="3" branch="false"/>
+								<line number="38" hits="3" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="39" hits="1" branch="false"/>
+								<line number="41" hits="2" branch="false"/>
+								<line number="42" hits="3" branch="false"/>
 							</lines>
 						</method>
 						<method name="returnBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -318,10 +323,10 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="10" branch="false"/>
-						<line number="9" hits="10" branch="false"/>
-						<line number="10" hits="10" branch="false"/>
-						<line number="11" hits="10" branch="false"/>
+						<line number="7" hits="11" branch="false"/>
+						<line number="9" hits="11" branch="false"/>
+						<line number="10" hits="11" branch="false"/>
+						<line number="11" hits="11" branch="false"/>
 						<line number="14" hits="4" branch="false"/>
 						<line number="15" hits="4" branch="false"/>
 						<line number="16" hits="4" branch="false"/>
@@ -344,12 +349,17 @@
 						<line number="28" hits="1" branch="false"/>
 						<line number="30" hits="3" branch="false"/>
 						<line number="32" hits="4" branch="false"/>
-						<line number="35" hits="2" branch="false"/>
-						<line number="36" hits="2" branch="false"/>
-						<line number="37" hits="2" branch="false"/>
-						<line number="38" hits="2" branch="false"/>
-						<line number="39" hits="2" branch="false"/>
-						<line number="40" hits="2" branch="false"/>
+						<line number="35" hits="3" branch="false"/>
+						<line number="36" hits="3" branch="false"/>
+						<line number="37" hits="3" branch="false"/>
+						<line number="38" hits="3" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="39" hits="1" branch="false"/>
+						<line number="41" hits="2" branch="false"/>
+						<line number="42" hits="3" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
@@ -394,36 +404,36 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="98" branch="false"/>
-								<line number="11" hits="98" branch="false"/>
-								<line number="12" hits="98" branch="false"/>
-								<line number="13" hits="98" branch="false"/>
-								<line number="14" hits="98" branch="false"/>
-								<line number="15" hits="98" branch="false"/>
+								<line number="10" hits="105" branch="false"/>
+								<line number="11" hits="105" branch="false"/>
+								<line number="12" hits="105" branch="false"/>
+								<line number="13" hits="105" branch="false"/>
+								<line number="14" hits="105" branch="false"/>
+								<line number="15" hits="105" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="23" hits="13" branch="true" condition-coverage="100% (2/2)">
+								<line number="23" hits="16" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="24" hits="1" branch="false"/>
-								<line number="26" hits="12" branch="true" condition-coverage="100% (2/2)">
+								<line number="26" hits="15" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="27" hits="1" branch="false"/>
-								<line number="29" hits="11" branch="false"/>
-								<line number="30" hits="11" branch="true" condition-coverage="100% (2/2)">
+								<line number="29" hits="14" branch="false"/>
+								<line number="30" hits="14" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="31" hits="7" branch="false"/>
-								<line number="33" hits="4" branch="false"/>
+								<line number="33" hits="7" branch="false"/>
 							</lines>
 						</method>
 						<method name="hashCode" signature="()I" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -439,34 +449,34 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="98" branch="false"/>
-						<line number="11" hits="98" branch="false"/>
-						<line number="12" hits="98" branch="false"/>
-						<line number="13" hits="98" branch="false"/>
-						<line number="14" hits="98" branch="false"/>
-						<line number="15" hits="98" branch="false"/>
+						<line number="10" hits="105" branch="false"/>
+						<line number="11" hits="105" branch="false"/>
+						<line number="12" hits="105" branch="false"/>
+						<line number="13" hits="105" branch="false"/>
+						<line number="14" hits="105" branch="false"/>
+						<line number="15" hits="105" branch="false"/>
 						<line number="18" hits="6" branch="false"/>
 						<line number="19" hits="6" branch="false"/>
-						<line number="23" hits="13" branch="true" condition-coverage="100% (2/2)">
+						<line number="23" hits="16" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="24" hits="1" branch="false"/>
-						<line number="26" hits="12" branch="true" condition-coverage="100% (2/2)">
+						<line number="26" hits="15" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="27" hits="1" branch="false"/>
-						<line number="29" hits="11" branch="false"/>
-						<line number="30" hits="11" branch="true" condition-coverage="100% (2/2)">
+						<line number="29" hits="14" branch="false"/>
+						<line number="30" hits="14" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="31" hits="7" branch="false"/>
-						<line number="33" hits="4" branch="false"/>
+						<line number="33" hits="7" branch="false"/>
 						<line number="38" hits="4" branch="false"/>
 					</lines>
 				</class>
